# ChangeLog for sys-boot/shlilo-lantank
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/shlilo-lantank/ChangeLog,v 1.1 2009/10/18 22:16:14 vapier Exp $

*shlilo-lantank-20040408 (18 Oct 2009)

  18 Oct 2009; Mike Frysinger <vapier@gentoo.org>
  +shlilo-lantank-20040408.ebuild, +files/lilo.conf, +metadata.xml:
  Initial ebuild by me.