@@ -1,15 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX lilo.conf 279 RMD160 c7565a001c2d836a7f27d8f9ec921730541eff06 SHA1 eea6caace2de2f81539b9c9248db97d552ed498c SHA256 bb8d165a5b444b68d2d14eafd6c8396fd52fd2aa16677ac5a7141ea98952fe5e
-DIST sh-lilo-sel-20040408.tar.gz 85932 RMD160 31ad30bee9bb205453069b35a88e130fa2355c69 SHA1 6faecce0060523d6ed9793e30a46c861ed2edc7c SHA256 60b653c63baa160bb4652b56acafd17e462b1bd1dc713620f1e150239ae2877d
-EBUILD shlilo-lantank-20040408.ebuild 755 RMD160 1501c0d868ca27fbdda8bacfcf3304d753cd580f SHA1 086285b1fa9da1f9c08eccc824687e38804095f4 SHA256 75ace85e8d9bc13f8c7d09608df1214be77051592ea38ba4fd29bfd91331bb6d
-MISC ChangeLog 401 RMD160 ee8156e43c4e910c7f5ced4e898fd265daa2f64d SHA1 68aaa708d1a3f2236267dac936672a48eadd9b08 SHA256 9e444c5d05e7d728b956cae43ad6a93d2dd8c80acfa51c08199057ee8b0c7711
-MISC metadata.xml 155 RMD160 5194cbdc05665b7fdc580436fdaaf1f5ac6770ef SHA1 80784bd2955229e4aafacdf232864ce3984be0b8 SHA256 5185e6eb802d7ca65e00f00ae5be2bbb8e21828c7ea7570773e8b3f74ac423f9
+AUX lilo.conf 279 SHA256 bb8d165a5b444b68d2d14eafd6c8396fd52fd2aa16677ac5a7141ea98952fe5e SHA512 317f08697ad868b105bd2df9615527b321453cffeff7834e0f2b64d2c012aff25068662ab4e5f9d0cd6ab155b17301cafad4bf982fc4d7c1e52b6dbdf207ef46 WHIRLPOOL 8f22b26cdd1cf9bb6706face756186ec900cfb97e140af75177e6d79d0b835ebd262697a9163b9438f60bd3d90ac2569e54f11cc9bddd90720afe16b4a38bf6a
+DIST sh-lilo-sel-20040408.tar.gz 85932 SHA256 60b653c63baa160bb4652b56acafd17e462b1bd1dc713620f1e150239ae2877d
+EBUILD shlilo-lantank-20040408.ebuild 757 SHA256 4f1243acc01b73be2c46b3deec7713b83a20e6783fce5f175777ad9045b361d1 SHA512 5b57a961c3a72110a6cc35cf7bacbcf5f0d73e8f556d3aa4be10f65a9ee735eb1aaf773aa2d7890d06022c7ee56cb69500c9450af6be9a8bbb1bc2da45cc7580 WHIRLPOOL 684bfedf9a2d1b17cdd097c0efa07447d0695955727f008b86b3bc67ccad6ac4da2ce08512d44dacd722601b1f0f7200eb143c4f41d1b8fdcf3f6f199c327aaa
+MISC ChangeLog 572 SHA256 39c5f3f8df4faa63926f88cd26c082d61a947d606091cbd8760f7c2abebe3eef SHA512 107928baa1dadd35bd20a1c2f84594dd850ec34f161d481e29c01a33793f1060c4e583fcc844390b0752f2f4dbe7f1a17bccbc33117a4b285c287e02a0bf2ddc WHIRLPOOL 6560dd1d361c864cc1fe658d77692daa118b54b4e78e308e60aeea4e34d84de06c61045b7577384defeb1eb8123017bb52448abdae026c4ec22732ba2de3a89f
+MISC metadata.xml 155 SHA256 5185e6eb802d7ca65e00f00ae5be2bbb8e21828c7ea7570773e8b3f74ac423f9 SHA512 8877c245dc8f8f68f2777addf7d49a3eef065ea7e73010eeefed379de8441fb409241bed560072c7cbc2a444949df68e5cb22058e1ebad2d312eef570604defd WHIRLPOOL 2e3ae4c8bb8b2ce3d2c223ca7c7c2e67feda659f854879cd520eecd9a9cc293a7442e18afa397cbdb126023a9c82bb796eb4e89fe42a031b7426cb923e9f32ec
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.13 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAkrbk7QACgkQlPl3HsVfCDreYACeMN8HLkZPVxIKM5FVOcCblcaw
-0fwAn3sqfrUojuqYKAMMf4oFwpOJ3AjX
-=IpaH
+iQIcBAEBCAAGBQJQpfnUAAoJEDxpGckxwJCB2HMP/1RsLrXBmS1M/7jDRi1d86iQ
+tDMP7IiGxTgFWH2yr1k50eBSGntKYwZuFe+/rpNxyG9U8HwHR/HSJQiiEPcDqlu0
+ZGQleRGi6NuE8T+ZDcd5Qvvh3lKX0HFIRYASW96cL7Tf1m0QktwBVe+sGJXd2AAx
+fK8WFgUp/ck8cnpfKRK/8uSDozN051UglrOHXWlVrWPCxyW8dew56gJwIo3F4TE/
+CgZs9ryo/CoQkBZKBUq+CIpa5R4Cm2fygncNML5K7MVVudOsgrHzHvJcWefjuWFX
+KfVzyEZv+o2Exj/j9WiD9gJKaUFzVKK+W5Tdk2A7QzpUejDVvzsCphYBpx3hF43+
+BnHp98fkLbVKAR/uejymPGj08u73smlOqCWlurRm7t/JHlNBbc8piCTOpK2vnALp
+gwhtt3Kvq74nDO0wdlzy5vQIcGDN6QLy7YmUphuitvWNywaac3IUX8YHiBHb7ByJ
+vAJO/rT9Xv32m/PXLoluhy08rsvazAxmfb5k9ni6Szn2aMzPOdnohg079WbawKYV
+0xAi8CEtELjIONDyr67HkstDswnAfWGxVfnDPyzGmbR/UVAzv1TM9AdOW9BkD+HZ
+etbix96hZgXlWzM2h53AZEjxmBfwRYLzinvJrJv17aT4y3cplGiD6lkNmgCIVKFC
+Lg77xAvL9Vt/+06EZvbI
+=+5M5
 -----END PGP SIGNATURE-----
