@@ -1,6 +1,10 @@
 # ChangeLog for sys-boot/shlilo-lantank
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/shlilo-lantank/ChangeLog,v 1.1 2009/10/18 22:16:14 vapier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/shlilo-lantank/ChangeLog,v 1.2 2012/11/16 08:30:22 ulm Exp $
+
+  16 Nov 2012; Ulrich Müller <ulm@gentoo.org> shlilo-lantank-20040408.ebuild:
+  Update LICENSE, "GPL-2+ BSD" according to README and notices in source files,
+  bug 442022.
 
 *shlilo-lantank-20040408 (18 Oct 2009)
 
